fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   width: 100%;
   /* height:550px;
    */
-   height:88vh;
+   height:86vh;
   /* margin-top: 10px; */
   /* border: 1px solid blue; */
   overflow: scroll;
@@ -351,10 +351,16 @@ background-color:white;
 
 }
 .dropdown-qr{
-width:100px;
+width:80px;
 
 }
 .text{
   text-align: center;
 
+}
+.dropdown-navbar{
+
+  /* margin-right: 110px; */
+  right: auto;
+  left: 0;
 }
